Add product-landing-page header and a CTA  section

--- a/product-landing-page/product-page.html
+++ b/product-landing-page/product-page.html
@@ -6,5 +6,60 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>product-landing-page</title>
     </head>
-    <body></body>
+    <body>
+        <!-- Header Section -->
+        <section class="header-container">
+            <header id="header">
+                <div class="header-img-container">
+                    <img
+                        id="header-img"
+                        src="./images/keychron-logo.png"
+                        alt="Keychron logo"
+                    />
+                </div>
+                <nav id="nav-bar">
+                    <ul>
+                        <li>
+                            <a class="nav-link" href="#keychron-c1"
+                                >Keychron C1</a
+                            >
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#features">Features</a>
+                        </li>
+                        <li><a class="nav-link" href="#pricing">Pricing</a></li>
+                        <li>
+                            <a class="nav-link" href="#help-&-support"
+                                >Help & Support
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+        </section>
+        <main>
+            <!-- Call To Action Section -->
+            <section class="cta-section">
+                <h4>Be The First To Know</h4>
+                <p>
+                    Get the latest product news, special offers and interesting
+                    behind-the-scenes stories from us.
+                </p>
+                <form
+                    id="form"
+                    action="https://www.freecodecamp.com/email-submit"
+                    method="post"
+                >
+                    <label for="email"></label>
+                    <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        placeholder="Enter your email"
+                    />
+                    <input type="submit" id="submit" value="Get started" />
+                </form>
+            </section>
+        </main>
+    </body>
 </html>
