--- a/product-landing-page/product-page.html
+++ b/product-landing-page/product-page.html
@@ -60,6 +60,101 @@
                     <input type="submit" id="submit" value="Get started" />
                 </form>
             </section>
+            <!-- Product Section -->
+            <section class="product-section" id="keychron-c1">
+                <h1>Keychron C1 Wired Mechanical Keyboard</h1>
+
+                <h4>A Tenkeyless Wired Mechanical Keyboard</h4>
+                <p>
+                    Engineered to maximize your productivity with most
+                    popular tenkeyless layout. The hot-swappable option on
+                    Gateron Mechanical switches and Keychron Mechanical
+                    switches offers the freedom to easily personalize your
+                    typing experience without soldering.
+                </p>
+                <div class="product-img">
+                    <img src="images/keychron-c1.png" alt="keychron-c1" />
+                </div>
+            </section>
+            <!-- Product Features Section -->
+            <section class="product-features-contaner" id="features">
+                <h1 class="centered-heading-text">FEATURES</h1>
+                <div class="product-features">
+                    <div class="product-feature-text">
+                        <h4>TYPE-C WIRED</h4>
+                        <p>
+                            With an easy and reliable USB Type-C connection, the
+                            C1 is best to fit home, office and light gaming use
+                            while connecting with your laptop or PC.
+                        </p>
+                    </div>
+
+                    <div class="product-feature-img">
+                        <img src="images/type-c-img.png" alt="type-c img" />
+                    </div>
+                </div>
+
+                <div class="product-features">
+                    <div class="product-feature-text">
+                        <h4>SUITABLE FOR ALL DEVICES</h4>
+                        <p>
+                            Compatible for both macOS and Windows. Keychron is
+                            one of only a few in the market that comes with a
+                            Mac multimedia keys layout for Mac enthusiasts. For
+                            Linux users, we also have a dedicated user group to
+                            help with the experience.
+                        </p>
+                    </div>
+                    <div class="product-feature-img display-first">
+                        <img
+                            src="images/for-all-devices.png"
+                            alt="for all devices"
+                        />
+                    </div>
+                </div>
+                <div class="product-features">
+                    <div class="product-feature-text">
+                        <h4>Legends Never Fade Out</h4>
+                        <p>
+                            Engineered with double-shot keycap set on White and
+                            RGB Backlight versions allow backlight shine through
+                            the legends with a subtle feeling.
+                        </p>
+                    </div>
+                    <div class="product-feature-img">
+                        <img src="images/lnf-img.png" alt="no fading" />
+                    </div>
+                </div>
+                <div class="product-features">
+                    <div class="product-feature-text">
+                        <h4>Mechanical Switch</h4>
+                        <p>
+                            Durable Gateron G Pro mechanical switch with a 50
+                            million keystroke lifespan to provide an unrivaled
+                            tactile responsiveness
+                        </p>
+                    </div>
+                    <div class="product-feature-img display-first">
+                        <img src="images/switches.png" alt="switches" />
+                    </div>
+                </div>
+                <div class="product-features">
+                    <div class="product-feature-text">
+                        <h4>18 TYPES OF RGB</h4>
+                        <p>
+                            Engineered with more than 15 types of RGB light and
+                            comes with different styles (flashing, breathing, or
+                            static white etc) which will match up to your mood.
+                        </p>
+                    </div>
+                    <div class="product-feature-img">
+                        <iframe src="https://youtu.be/ZfZ-Jnpqa3Y?si=eAtM7vVQ874uBKSu" id="video">
+                            
+                        </iframe>
+                    </div>
+            </section>
+
+
         </main>
     </body>
 </html>
