style: add media queries for responsive design

--- a/product-landing-page/product-page.html
+++ b/product-landing-page/product-page.html
@@ -10,6 +10,7 @@
         </script>
         <link rel="stylesheet" href="./product-page-styles/main.css">
         <link rel="stylesheet" href="./product-page-styles/utility.css">
+        <link rel="stylesheet" href="./product-page-styles/responsive.css">
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
