--- a/portfolio-webpage/index.html
+++ b/portfolio-webpage/index.html
@@ -9,122 +9,141 @@
             src="https://kit.fontawesome.com/0d4c75c8ed.js"
             crossorigin="anonymous"
         ></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;1,100;1,600;1,700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./portfolio-css/styles.css" />
+        <link rel="stylesheet" href="./portfolio-css/media-queries.css" />
     </head>
     <body>
         <!-- Navigation Bar Section -->
+        <header>
+            <nav id="navbar">
+                <div class="logo">
+                    <i class="fa-solid fa-code"></i>
+                    <span>DevNdamase</span>
+                </div>
 
-        <nav id="navbar">
-            <i class="fa-solid fa-code"></i>
-            <span>DevNdamase</span>
-            <ul class="nav-links">
-                <li>
-                    <a href="#welcome-section">About</a>
-                </li>
-                <li>
-                    <a href="#projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
+                <ul class="nav-links">
+                    <li>
+                        <a href="#welcome-section">About</a>
+                    </li>
+                    <li>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
         <!-- Welcome Section -->
 
-        <section id="welcome-section" class="welcome-section">
-            <h1>Hello, <br />I am <span>Sibongiseni Ndamase</span></h1>
-            <h4>a Web Developer</h4>
-        </section>
+        <main>
+            <section id="welcome-section" class="welcome-section">
+                <h1>
+                    Hello, <br />I am
+                    <span class="name">Sibongiseni Ndamase</span>,
+                </h1>
+                <h4>a Web Developer.</h4>
+            </section>
 
-        <!-- Projects Section -->
+            <!-- Projects Section -->
 
-        <section id="projects" class="projects-section">
-            <h4 class="projects-heading">These are some of my projects:</h4>
-            <div project-tile-container>
-                <a href="#" target="_blank" class="project-tile">
-                    <img
-                        class="project-img"
-                        src="./images/product-landing-page.png"
-                        alt="an image of a project"
-                    />
-                    <p class="project-title">Product Landing Page</p>
-                </a>
-            </div>
-            <div project-tile-container>
-                <a href="#" target="_blank" class="project-tile">
-                    <img
-                        class="project-img"
-                        src="./images/tribute-page.png"
-                        alt="an image of a project"
-                    />
-                    <p class="project-title">Tribute Page</p>
-                </a>
-            </div>
-            <div project-tile-container>
-                <a href="#" target="_blank" class="project-tile">
-                    <img
-                        class="project-img"
-                        src="./images/survey-form.png"
-                        alt="an image of a project"
-                    />
-                    <p class="project-title">Survey Form Page</p>
-                </a>
-            </div>
-            <div project-tile-container>
-                <a href="#" target="_blank" class="project-tile">
-                    <img
-                        class="project-img"
-                        src="./images/odin-recipes.png"
-                        alt="an image of a project"
-                    />
-                    <p class="project-title">Odin Recipes Page</p>
-                </a>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-
-        <section id="contact" class="contact-section">
-            <div class="contact-section-text">
-                <h2>Let's work together...</h2>
-                <p>How do you take your coffee?</p>
-            </div>
-            <div class="contact-links">
-                <div>
-                    <a
-                        href="#"
-                        target="_blank"
-                        class="contact-details"
-                        id="profile-link"
-                    >
-                        <i class="fa-brands fa-free-code-camp"></i>
-                        freCodeCamp
-                    </a>
+            <section id="projects" class="projects-section">
+                <h4 class="projects-heading">These are some of my projects</h4>
+                <div class="project-grid">
+                    <div class="project-tile-container tile-1">
+                        <a href="#" target="_blank" class="project-tile">
+                            <img
+                                class="project-img"
+                                src="./images/product-landing-page.png"
+                                alt="an image of a project"
+                            />
+                            <p>Product Landing Page</p>
+                        </a>
+                    </div>
+                    <div class="project-tile-container tile-2">
+                        <a href="#" target="_blank" class="project-tile">
+                            <img
+                                class="project-img"
+                                src="./images/tribute-page.png"
+                                alt="an image of a project"
+                            />
+                            <p>Tribute Page</p>
+                        </a>
+                    </div>
+                    <div class="project-tile-container tile-3">
+                        <a href="#" target="_blank" class="project-tile">
+                            <img
+                                class="project-img"
+                                src="./images/survey-form.png"
+                                alt="an image of a project"
+                            />
+                            <p>Survey Form Page</p>
+                        </a>
+                    </div>
+                    <div class="project-tile-container tile-4">
+                        <a href="#" target="_blank" class="project-tile">
+                            <img
+                                class="project-img"
+                                src="./images/odin-recipes.png"
+                                alt="an image of a project"
+                            />
+                            <p>Odin Recipes Page</p>
+                        </a>
+                    </div>
                 </div>
-                <div>
-                    <a href="#" target="_blank" class="contact-details"
-                        ><i class="fa-brands fa-github"></i> GitHub</a
-                    >
+            </section>
+
+            <!-- Contact Section -->
+
+            <section id="contact" class="contact-section">
+                <div class="contact-section-text">
+                    <h2>Let's work together...</h2>
+                    <p>How do you take your coffee?</p>
                 </div>
-                <div>
-                    <a href="#" target="_blank" class="contact-details"
-                        ><i class="fa-solid fa-at"></i> Send a mail</a
-                    >
+                <div class="contact-links">
+                    <div>
+                        <a
+                            href="https://www.freecodecamp.org/DevNdamase"
+                            target="_blank"
+                            class="contact-details"
+                            id="profile-link"
+                        >
+                            <i class="fa-brands fa-free-code-camp"></i>
+                            freCodeCamp
+                        </a>
+                    </div>
+                    <div>
+                        <a
+                            href="https://github.com/DevNdamase"
+                            target="_blank"
+                            class="contact-details"
+                            ><i class="fa-brands fa-github"></i> GitHub</a
+                        >
+                    </div>
+                    <div>
+                        <a href="#" target="_blank" class="contact-details"
+                            ><i class="fa-solid fa-at"></i> Send a mail</a
+                        >
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
 
         <!-- Footer Section -->
 
         <footer>
             <p>
                 &copy; All rights reserved.
-                <a href="#" target="_blank">
-                    <i class="fa-solid fa-code"></i>DevNdamase<i
-                        class="fa-solid fa-code"
-                    ></i>
-                </a>
+                <a href="https://github.com/DevNdamase" target="_blank"
+                    >DevNdamase</a
+                >
             </p>
         </footer>
     </body>
